--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,7 +9,7 @@ events {
 }
 
 http {
-    upstream auth-shoora {
+    upstream auth {
         server auth-shoora:8000;
     }
     server {
@@ -17,10 +17,16 @@ http {
         listen [::]:80;
         server_name localhost tyre.shoora.com www.tyre.shoora.com;
         location /auth {
-            proxy_pass http://auth-shoora;
+            proxy_pass http://auth;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
         }
         location /static {
-            proxy_pass http://auth-shoora;
+            proxy_pass http://auth;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
         }
     }
     
@@ -31,10 +37,16 @@ http {
         ssl_certificate /etc/nginx/ssl/shoora.crt;
         ssl_certificate_key /etc/nginx/ssl/shoora.key;
         location /auth {
-            proxy_pass http://auth-shoora;
+            proxy_pass http://auth;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
         }
         location /static {
-            proxy_pass http://auth-shoora;
+            proxy_pass http://auth;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
         }
     }
     
