--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,12 +12,21 @@ http {
     upstream auth {
         server auth-shoora:8000;
     }
+    upstream transport {
+        server transport-shoora:8000;
+    }
     server {
         listen 80;
         listen [::]:80;
         server_name localhost tyre.shoora.com www.tyre.shoora.com;
         location /auth {
             proxy_pass http://auth;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
+        location /transport {
+            proxy_pass http://transport;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_redirect off;
@@ -44,6 +53,12 @@ http {
         }
         location /static {
             proxy_pass http://auth;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
+        location /transport {
+            proxy_pass http://transport;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_redirect off;
