re-formatted the shoora

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,22 +23,23 @@ services:
       pip install --upgrade pip
       make deps
       make migrate
-      python manage.py collectstatic
+      python manage.py collectstatic --noinput
       python manage.py runserver 0.0.0.0:8000
       '
     ports:
       - "8000:8000"
+
   transport-shoora:
     image: python:3.7
     volumes:
-      - ./transport:/app
+      - ./auth:/app
     command: |
       sh -c '
       cd /app
       pip install --upgrade pip
       make deps
       make migrate
-      python manage.py collectstatic
+      python manage.py collectstatic --noinput
       python manage.py runserver 0.0.0.0:8000
       '
     ports:
