--- a/auth/requirements.txt
+++ b/auth/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 Django==3.2.16
 django-cors-headers==3.13.0
+django-environ==0.9.0
 django-filter==22.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
