--- a/auth/requirements.txt
+++ b/auth/requirements.txt
@@ -1,13 +1,39 @@
 asgiref==3.5.2
+black==22.10.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
+coreapi==2.3.3
+coreschema==0.0.4
 Django==3.2.16
 django-cors-headers==3.13.0
 django-environ==0.9.0
 django-filter==22.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+drf-yasg==1.21.4
+idna==3.4
+importlib-metadata==5.0.0
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+mypy-extensions==0.4.3
+packaging==21.3
+pathspec==0.10.2
 Pillow==9.2.0
+platformdirs==2.5.4
 psycopg2-binary==2.9.3
 PyJWT==2.6.0
+pyparsing==3.0.9
 pytz==2022.5
+requests==2.28.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
 sqlparse==0.4.3
+tomli==2.0.1
+typed-ast==1.5.4
 typing_extensions==4.4.0
+uritemplate==4.1.1
+urllib3==1.26.13
+zipp==3.10.0
