--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -37,6 +37,13 @@ http {
             proxy_set_header Host $host;
             proxy_redirect off;
         }
+
+        location /swagger {
+            proxy_pass http://auth;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
     }
     
     server {
@@ -52,6 +59,12 @@ http {
             proxy_redirect off;
         }
         location /static {
+            proxy_pass http://auth;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
+        location /swagger {
             proxy_pass http://auth;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
