--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,6 +15,9 @@ http {
     upstream transport {
         server transport-shoora:8000;
     }
+    upstream monitor {
+        server monitor-shoora:8000;
+    }
     server {
         listen 80;
         listen [::]:80;
@@ -27,6 +30,12 @@ http {
         }
         location /transport {
             proxy_pass http://transport;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
+        location /monitor {
+            proxy_pass http://monitor;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_redirect off;
@@ -72,6 +81,12 @@ http {
         }
         location /transport {
             proxy_pass http://transport;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
+        location /monitor {
+            proxy_pass http://monitor;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_redirect off;
