--- a/auth/requirements.txt
+++ b/auth/requirements.txt
@@ -3,6 +3,8 @@ asgiref==3.5.2
 async-timeout==4.0.2
 billiard==3.6.4.0
 black==22.10.0
+boto3==1.26.26
+botocore==1.29.26
 cached-property==1.5.2
 celery==5.2.7
 certifi==2022.9.24
@@ -25,6 +27,7 @@ importlib-metadata==4.13.0
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
+jmespath==1.0.1
 kombu==5.2.4
 MarkupSafe==2.1.1
 mypy-extensions==0.4.3
@@ -34,13 +37,16 @@ Pillow==9.2.0
 platformdirs==2.5.4
 prompt-toolkit==3.0.33
 psycopg2-binary==2.9.3
+pycurl==7.45.1
 PyJWT==2.6.0
 pyparsing==3.0.9
+python-dateutil==2.8.2
 pytz==2022.5
 redis==4.3.5
 requests==2.28.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
+s3transfer==0.6.0
 six==1.16.0
 sqlparse==0.4.3
 tomli==2.0.1
