--- a/auth/requirements.txt
+++ b/auth/requirements.txt
@@ -22,6 +22,8 @@ django-filter==22.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.4
+geographiclib==2.0
+geopy==2.3.0
 idna==3.4
 importlib-metadata==4.13.0
 inflection==0.5.1
