--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,15 @@ services:
   
   redis:
     image: "redis:alpine"
+    command: |
+      sh -c '
+      redis-server
+      '
+    ports:
+        - "6379:6379"
+    volumes:
+        - ./redis-volume:/data
+
 
   #django app
   auth-shoora:
