--- a/auth/requirements.txt
+++ b/auth/requirements.txt
@@ -16,6 +16,7 @@ click-repl==0.2.0
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.16
+django-autocomplete-light==3.9.4
 django-cors-headers==3.13.0
 django-environ==0.9.0
 django-filter==22.1
