--- a/auth/requirements.txt
+++ b/auth/requirements.txt
@@ -20,6 +20,7 @@ django-autocomplete-light==3.9.4
 django-cors-headers==3.13.0
 django-environ==0.9.0
 django-filter==22.1
+django-storages==1.13.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.4
