--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,6 +22,12 @@ http {
         listen 80;
         listen [::]:80;
         server_name localhost tyre.shoora.com www.tyre.shoora.com;
+        # location / {
+        #     proxy_pass http://auth;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header Host $host;
+        #     proxy_redirect off;
+        # }
         location /auth {
             proxy_pass http://auth;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -61,6 +67,12 @@ http {
         server_name tyre.shoora.com www.tyre.shoora.com;
         ssl_certificate /etc/nginx/ssl/shoora.crt;
         ssl_certificate_key /etc/nginx/ssl/shoora.key;
+        # location / {
+        #     proxy_pass http://auth;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header Host $host;
+        #     proxy_redirect off;
+        # }
         location /auth {
             proxy_pass http://auth;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
