--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
       cd /app
       pip install --upgrade pip
       make deps
+      pip install cmake
+      pip install dlib
       make migrate
       python manage.py collectstatic --noinput
       python manage.py runserver 0.0.0.0:8000
@@ -50,6 +52,8 @@ services:
       cd /app
       pip install --upgrade pip
       make deps
+      pip install cmake
+      pip install dlib
       make migrate
       python manage.py collectstatic --noinput
       python manage.py runserver 0.0.0.0:8000
@@ -66,6 +70,8 @@ services:
       cd /app
       pip install --upgrade pip
       make deps
+      pip install cmake
+      pip install dlib
       make migrate
       python manage.py collectstatic --noinput
       python manage.py runserver 0.0.0.0:8000
@@ -82,6 +88,8 @@ services:
       cd /app
       pip install --upgrade pip
       make deps
+      pip install cmake
+      pip install dlib
       celery -A auth worker -l info
       '
     
@@ -96,6 +104,8 @@ services:
       cd /app
       pip install --upgrade pip
       make deps
+      pip install cmake
+      pip install dlib
       celery -A auth beat -l info
       '
     depends_on:
