--- a/composes/main/docker-compose.yml
+++ b/composes/main/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       sh -c '
       cd /app
       pip install --upgrade pip
-      make deps
+      make api-deps
       make migrate
       python manage.py collectstatic --noinput
       python manage.py runserver 0.0.0.0:8000
