--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,43 +22,43 @@ http {
         listen 80;
         listen [::]:80;
         server_name localhost tyre.shoora.com www.tyre.shoora.com;
-        # location / {
+        location / {
+            proxy_pass http://auth;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
+        # location /auth {
         #     proxy_pass http://auth;
         #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         #     proxy_set_header Host $host;
         #     proxy_redirect off;
         # }
-        location /auth {
-            proxy_pass http://auth;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
-        location /transport {
-            proxy_pass http://transport;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
-        location /monitor {
-            proxy_pass http://monitor;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
-        location /static {
-            proxy_pass http://auth;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
+        # location /transport {
+        #     proxy_pass http://transport;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header Host $host;
+        #     proxy_redirect off;
+        # }
+        # location /monitor {
+        #     proxy_pass http://monitor;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header Host $host;
+        #     proxy_redirect off;
+        # }
+        # location /static {
+        #     proxy_pass http://auth;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header Host $host;
+        #     proxy_redirect off;
+        # }
 
-        location /swagger {
-            proxy_pass http://auth;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
+        # location /swagger {
+        #     proxy_pass http://auth;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header Host $host;
+        #     proxy_redirect off;
+        # }
     }
     
     server {
@@ -67,42 +67,42 @@ http {
         server_name tyre.shoora.com www.tyre.shoora.com;
         ssl_certificate /etc/nginx/ssl/shoora.crt;
         ssl_certificate_key /etc/nginx/ssl/shoora.key;
-        # location / {
+        location / {
+            proxy_pass http://auth;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
+        # location /auth {
         #     proxy_pass http://auth;
         #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         #     proxy_set_header Host $host;
         #     proxy_redirect off;
         # }
-        location /auth {
-            proxy_pass http://auth;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
-        location /static {
-            proxy_pass http://auth;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
-        location /swagger {
-            proxy_pass http://auth;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
-        location /transport {
-            proxy_pass http://transport;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
-        location /monitor {
-            proxy_pass http://monitor;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
+        # location /static {
+        #     proxy_pass http://auth;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header Host $host;
+        #     proxy_redirect off;
+        # }
+        # location /swagger {
+        #     proxy_pass http://auth;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header Host $host;
+        #     proxy_redirect off;
+        # }
+        # location /transport {
+        #     proxy_pass http://transport;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header Host $host;
+        #     proxy_redirect off;
+        # }
+        # location /monitor {
+        #     proxy_pass http://monitor;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header Host $host;
+        #     proxy_redirect off;
+        # }
     }
     
 }
