--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,12 +12,12 @@ http {
     upstream auth {
         server auth-shoora:8000;
     }
-    upstream transport {
-        server transport-shoora:8000;
-    }
-    upstream monitor {
-        server monitor-shoora:8000;
-    }
+    # upstream transport {
+    #     server transport-shoora:8000;
+    # }
+    # upstream monitor {
+    #     server monitor-shoora:8000;
+    # }
     server {
         listen 80;
         listen [::]:80;
