--- a/auth/requirements.txt
+++ b/auth/requirements.txt
@@ -14,7 +14,6 @@ click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
-cmake
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.16
@@ -24,13 +23,11 @@ django-cors-headers==3.13.0
 django-environ==0.9.0
 django-filter==22.1
 django-storages==1.13.2
+django_debug_toolbar==3.8.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
-dlib
 drf-spectacular==0.25.1
 drf-yasg==1.21.4
-face-recognition==1.3.0
-face-recognition-models==0.3.0
 geographiclib==2.0
 geopy==2.3.0
 idna==3.4
