--- a/composes/main/docker-compose.yml
+++ b/composes/main/docker-compose.yml
@@ -40,6 +40,21 @@ services:
       '
     ports:
       - "8000:8000"
+  
+  celery:
+    image: python:3.7
+    volumes:
+      - ../../auth:/app
+    command: |
+      sh -c '
+      cd /app
+      pip install --upgrade pip
+      make api-deps
+      celery -A auth worker  -l INFO -c 2 -Q celery --max-tasks-per-child=100
+      '
+    
+    depends_on:
+      - redis
 
   # transport-shoora:
   #   image: python:3.7
