--- a/composes/main/docker-compose.yml
+++ b/composes/main/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       cd /app
       pip install --upgrade pip
       make api-deps
-      celery -A auth worker  -l DEBUG -c 2 -Q celery --max-tasks-per-child=100
+      celery -A auth worker  -l INFO -c 2 -Q celery --max-tasks-per-child=100
       '
     
     depends_on:
