--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -68,7 +68,7 @@ http {
         ssl_certificate /etc/nginx/ssl/shoora.crt;
         ssl_certificate_key /etc/nginx/ssl/shoora.key;
         location / {
-            proxy_pass http://auth;
+            proxy_pass https://auth;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_redirect off;
